Add instructions and simplify deployment

--- a/funcx/templates/web-service-config.yaml
+++ b/funcx/templates/web-service-config.yaml
@@ -11,7 +11,7 @@ data:
   app.conf: |
     REDIS_PORT = 6379
     REDIS_HOST = "{{ .Release.Name }}-redis-master"
-    HOSTNAME = "{{ .Values.webService.host }}"
+    HOSTNAME = "Not Used"
     GLOBUS_CLIENT = "{{ .Values.webService.globusClient }}"
     GLOBUS_KEY = "{{ .Values.webService.globusKey }}"
 
