Add kubernetes forwarded to chart

--- a/funcx/templates/web-service-config.yaml
+++ b/funcx/templates/web-service-config.yaml
@@ -20,3 +20,4 @@ data:
     DB_PASSWORD = "{{ .Values.postgresql.postgresqlPassword }}"
     DB_HOST = "{{ .Release.Name }}-postgresql"
 
+    FORWARDER_IP = "{{ .Values.forwarderIP }}"
