Add forwarder deployment and update values to work with it

--- a/funcx/values.yaml
+++ b/funcx/values.yaml
@@ -29,6 +29,11 @@ endpoint:
   pullPolicy: IfNotPresent
   replicas: 1
 
+forwarder:
+  enabled: true
+  image: funcx/forwarder
+  tag: dev
+  pullPolicy: IfNotPresent
 
 postgres:
   enabled: true
