--- a/funcx/templates/web-service-config.yaml
+++ b/funcx/templates/web-service-config.yaml
@@ -23,4 +23,4 @@ data:
     DB_PASSWORD = "{{ .Values.postgresql.postgresqlPassword }}"
     DB_HOST = "{{ .Release.Name }}-postgresql"
 
-    FORWARDER_IP = "{{ .Values.forwarderIP }}"
+    FORWARDER_IP = "{{ .Release.Name }}-forwarder"
