--- a/funcx/values.yaml
+++ b/funcx/values.yaml
@@ -26,6 +26,8 @@ endpoint:
   tag: dev
   pullPolicy: IfNotPresent
   replicas: 1
+  workerImage: python:3.7.9-buster
+  workerInit: "pip install parsl==0.9.0;pip install --force-reinstall funcx>=0.0.2a0"
 
 forwarder:
   enabled: true
