--- a/funcx/Chart.yaml
+++ b/funcx/Chart.yaml
@@ -8,10 +8,6 @@ type: application
 # to the chart and its templates, including the app version.
 version: 0.3.0
 
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application.
-appVersion: 0.3.0
-
 dependencies:
   - name: postgresql
     version: 9.1.4
@@ -20,4 +16,8 @@ dependencies:
   - name: redis
     version: 10.7.*
     repository: https://charts.bitnami.com/bitnami
+  - name: funcx_endpoint
+    version: 0.1.0
+    repository: http://funcx.org/funcx-helm-charts
+    condition: endpoint.enabled
 
