--- a/funcx/values.yaml
+++ b/funcx/values.yaml
@@ -19,6 +19,7 @@ webService:
   replicas: 1
   globusClient: <<your app client>>
   globusKey: <<your app key>>
+  funcxScope: https://auth.globus.org/scopes/facd7ccc-c5f4-42aa-916b-a0e270e2c2a9/all
 
 endpoint:
   enabled: true
